js/js.translator/testData/incremental/invalidation/localObjectsLeakThroughInterface/lib1/classA.1.kt
class ClassA {
    fun leakObject(): Interface {
        konst obj = object : Interface {
            override fun getNumber() = 1
        }
        return obj
    }
}
